backup/v2.4.1/CHANGELOG.md
# Stage Note

## v2.4.1
・観劇記録入力アシスト追加
・公演名
・劇場
・出演者
・同行者

## Version 2.1.0

### 新機能
- 観劇記録機能を追加
- 観劇記録の編集機能を追加
- 観劇記録の削除機能を追加
- 観劇記録の検索機能を追加

### 改善
- 観劇記録を日時順で表示
- リアルタイム検索に対応
- 検索クリアボタンを追加

## v2.0.0-beta.3
日付：2026-07-04

### Added
- チケット編集機能
- チケット更新機能
- チケット削除機能
- チケット検索機能
- リアルタイム検索
- 検索クリア機能
- チケット代管理
- 受取・発券状況管理

### Changed
- 公演日時の降順ソート
- 編集時に画面上部へスクロール
- チケット管理画面をリファクタリング

### Fixed
- 並び替え処理の修正
- 編集処理の不具合修正
- 保存処理の不具合修正

## v2.0.0-beta.3

### チケット管理
- 編集機能を追加
- 更新機能を追加
- 編集中表示を追加
- 編集時にフォームへ自動スクロール
- 編集中は保存ボタンを「更新」に変更

## v2.0.0-beta.2

### チケット管理
- チケット管理画面作成
- 入力フォーム追加
- LocalStorage保存
- 一覧表示
- 削除機能追加

### 仕様変更
- 「受取・発券状況」を採用
- 「チケット代」を追加
- チケット代は Number 型で保存する仕様に変更

## v1.0.1

### 変更内容
- アプリ名を「Stage Note」に変更
- CHANGELOG.md を追加

### 学んだこと
- HTMLのtitleタグ
- h1タグの役割

### バックアップ
- index-v1.0.1.html
- CHANGELOG-v1.0.1.md